# curso-agno

./: analista.py  llm_call.py  own_tools.py  pyproject.toml  researcher.py
